# Rustlings-for-LLM

./: Cargo.toml  README.md  rust-analyzer.toml
exercises/: README.md
exercises/01_vector_ops/: Cargo.toml  README.md  vector_ops1.rs  vector_ops2.rs  vector_ops3.rs
exercises/01_vector_ops/src/: attention_score.rs  gradient_compute.rs
exercises/02_tensor_compute/: Cargo.toml  README.md  tensor_compute1.rs
exercises/02_tensor_compute/src/: layer_norm.rs  multi_head_attention.rs
exercises/03_attention_mechanism/: Cargo.toml  README.md  attention1.rs  attention2.rs
exercises/03_f16_compute/src/: f16_basics.rs  f16_overflow.rs
solutions/: README.md
